<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diffLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".FragDifficulties">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:checked="true"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/radio_easy"
            android:translationX="50dp" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/radio_medium"
            android:translationX="50dp" />

        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/radio_hard"
            android:translationX="50dp" />

    </RadioGroup>


</RelativeLayout>